--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,14 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
-    "mysql2": "^3.11.3"
+    "mysql2": "^3.11.3",
+    "util": "^0.12.5"
   }
 }
